--- a/example/client/Dockerfile
+++ b/example/client/Dockerfile
@@ -3,7 +3,7 @@ FROM node:latest
 ENV SSE_SERVER_HOST="localhost:8080"
 ENV CLIENT_PORT=8082
 
-WORKDIR /app
+WORKDIR /client
 
 RUN npm init -y
 RUN npm install express ejs
